# linsw_lab2

./: .gitignore  CMakeLists.txt  Makefile  main.c
